# LanPLAY

./: .gitignore  Cargo.toml  README.md  idea.md
.github/workflows/: ci.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/resources/ffmpeg/: README.md
apps/desktop/src-tauri/resources/vigem/: README.md
apps/desktop/src-tauri/src/: firewall.rs  lib.rs  main.rs  session.rs  settings_store.rs  tailscale.rs  updater.rs  vigem_setup.rs
docs/architecture/: LANPlay-Full-Plan.md  build-online.md  phase-status.md  repo-layout.md  stack-and-latency.md
docs/research/: capture-apis.md  controllers-vigem-sunshine.md  encoders-windows.md  moonlight-client-input.md  sunshine-vs-lanplay-latency.md
tools/: fetch-ffmpeg.ps1  fetch-vigem-redist.ps1
