[package]
name = "lanplay"
version = "0.1.0"
description = "LANPlay desktop app — low-latency stream over Tailscale"
authors = ["LANPlay"]
edition = "2021"

[lib]
name = "lanplay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
# In-app update from GitHub nightly release
ureq = { version = "2", default-features = true, features = ["tls"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

lanplay-shared = { path = "../../../packages/shared" }
lanplay-protocol = { path = "../../../packages/protocol" }
lanplay-networking = { path = "../../../packages/networking" }
lanplay-controllers = { path = "../../../packages/controllers" }
lanplay-video = { path = "../../../packages/video" }
lanplay-overlay = { path = "../../../packages/overlay" }
